--- a/fBReader/src/main/res/layout/dialog_translate.xml
+++ b/fBReader/src/main/res/layout/dialog_translate.xml
@@ -6,34 +6,71 @@
     android:layout_marginRight="16dp"
     android:orientation="vertical">
 
+
+    <LinearLayout
+        android:id="@+id/trans_phonetic_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="英"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/phonetic_content_en"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
+
+        <ImageView
+            android:id="@+id/read_en"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/drag_icon" />
+
+
+        <TextView
+            android:id="@+id/pronunciation_us"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="美"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/phonetic_content_us"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
+
+        <ImageView
+            android:id="@+id/read_us"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/drag_icon" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/symbol_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/trans_phonetic"
+        android:id="@+id/trans_none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:textColor="@color/white"
-        android:textSize="16dp" />
-
-    <TextView
-        android:id="@+id/trans_line0"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="16dp" />
-
-    <TextView
-        android:id="@+id/trans_line1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textColor="@color/white"
-        android:textSize="16dp" />
-
-    <TextView
-        android:id="@+id/trans_line2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:text="未找到相关翻译"
         android:textColor="@color/white"
         android:textSize="16dp" />
 
@@ -43,8 +80,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
-        android:text="查看更多释义"
         android:gravity="center"
+        android:text="查看更多释义"
         android:textColor="#0000bb"
         android:textSize="16dp" />
 </LinearLayout>
